Bug 399513 - Alpha lock doesn't store to kra file anymore.
Summary: Alpha lock doesn't store to kra file anymore.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2018-10-08 13:35 UTC by wolthera
Modified: 2018-10-11 08:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2018-10-08 13:35:31 UTC
SUMMARY
When making an image where layers are alpha-locked, and saving, on load alpha is unlocked.

STEPS TO REPRODUCE
1. Make image with layers.
2. Alpha lock a layer
3. save image.
4. Load image.

OBSERVED RESULT
Layer is not alpha locked anymore.

EXPECTED RESULT
Layer is alpha locked.
Comment 1 Halla Rempt 2018-10-08 13:39:12 UTC
Broken since 4.1.1
Comment 2 joupent 2018-10-08 15:54:45 UTC
This seems to be the result of commit 365d0eb775cbff3bf6afda3f9b703741dbd68710 ("Do not save and load channel lock flags to .kra")
Comment 3 Halla Rempt 2018-10-11 07:47:37 UTC
Git commit 1e51130f30ebb28ee427cb044f4a6bd365f09d80 by Boudewijn Rempt.
Committed on 11/10/2018 at 07:46.
Pushed by rempt into branch 'master'.

Fix saving layer lock, alpha lock and alpha inheritance

M  +3    -0    plugins/impex/libkra/kis_kra_loader.cpp
M  +5    -0    plugins/impex/libkra/kis_kra_savexml_visitor.cpp
M  +1    -0    plugins/impex/libkra/kis_kra_tags.h

https://commits.kde.org/krita/1e51130f30ebb28ee427cb044f4a6bd365f09d80
Comment 4 Halla Rempt 2018-10-11 08:27:11 UTC
Git commit 997dc077fc1857072288e3816469c13ad4a49c5c by Boudewijn Rempt.
Committed on 11/10/2018 at 07:56.
Pushed by rempt into branch 'krita/4.1'.

Fix saving layer lock, alpha lock and alpha inheritance
(cherry picked from commit 1e51130f30ebb28ee427cb044f4a6bd365f09d80)

M  +3    -0    plugins/impex/libkra/kis_kra_loader.cpp
M  +5    -0    plugins/impex/libkra/kis_kra_savexml_visitor.cpp
M  +1    -0    plugins/impex/libkra/kis_kra_tags.h

https://commits.kde.org/krita/997dc077fc1857072288e3816469c13ad4a49c5c