plugins/impex/libkra/kis_kra_loader.cpp
@@ -746,6 +746,9 @@ KisNodeSP KisKraLoader::loadNode(const KoXmlElement& element, KisImageSP image)
 
     if (node->inherits("KisPaintLayer")) {
         KisPaintLayer* layer            = qobject_cast<KisPaintLayer*>(node.data());
+        QBitArray      channelLockFlags = stringToFlags(element.attribute(CHANNEL_LOCK_FLAGS, ""), colorSpace->channelCount());
+        layer->setChannelLockFlags(channelLockFlags);
+
         bool onionEnabled = element.attribute(ONION_SKIN_ENABLED, "0") == "0" ? false : true;
         layer->setOnionSkinEnabled(onionEnabled);
     }
